# ChangeLog for sys-devel/gdb
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.160 2010/01/05 02:38:30 vapier Exp $

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> gdb-7.0.ebuild:
  Add fix by Knut St. Osmundsen for building with USE=multitarget #299600.

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> gdb-7.0.ebuild:
  Stable on alpha, bug #296389

  22 Dec 2009; Markus Meier <maekke@gentoo.org> gdb-7.0.ebuild:
  amd64/arm/x86 stable, bug #296389

*gdb-7.0 (10 Oct 2009)

  10 Oct 2009; Mike Frysinger <vapier@gentoo.org> +gdb-7.0.ebuild,
  metadata.xml:
  Version bump.

  10 Oct 2009; Mike Frysinger <vapier@gentoo.org> gdb-6.8-r1.ebuild,
  gdb-6.8-r2.ebuild, gdb-6.8.50.20090811.2.12.ebuild:
  Update readline check to include SLOT.

  16 Aug 2009; Mike Frysinger <vapier@gentoo.org> gdb-6.8-r2.ebuild:
  Add support for IUSE=expat #280391 by Maciej Mrozowski.

*gdb-6.8.50.20090811.2.12 (16 Aug 2009)

  16 Aug 2009; Mike Frysinger <vapier@gentoo.org>
  +gdb-6.8.50.20090811.2.12.ebuild:
  Version bump.

*gdb-6.8.50.20090302.8.11 (12 Mar 2009)

  12 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +gdb-6.8.50.20090302.8.11.ebuild:
  Add an ebuild for Fedora rpms (since they apply a ton of custom patches).

*gdb-6.8-r2 (12 Mar 2009)

  12 Mar 2009; Mike Frysinger <vapier@gentoo.org> +gdb-6.8-r2.ebuild:
  Grab fix from Fedora for accessing tls vars (like errno).

  22 Feb 2009; Mike Frysinger <vapier@gentoo.org> gdb-6.8-r1.ebuild:
  Use system readline only if it is version 5 #259865 by michel.

  01 Feb 2009; nixnut <nixnut@gentoo.org> gdb-6.8-r1.ebuild:
  ppc stable #255219

  23 Jan 2009; Brent Baude <ranger@gentoo.org> gdb-6.8-r1.ebuild:
  stable ppc64, bug 255219

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org> gdb-6.8-r1.ebuild:
  ia64/sparc stable wrt #255219

  18 Jan 2009; Markus Meier <maekke@gentoo.org> gdb-6.8-r1.ebuild:
  amd64/x86 stable, bug #255219
