@@ -7,12 +7,15 @@ DIST gdb-6.8-patches-1.5.tar.lzma 125348 RMD160 f0f2668b709aa4f06a77b8c9a9d14727
 DIST gdb-6.8.50.20090811-2.fc12.src.rpm 18556041 RMD160 e3ae747d901e840e3de293acb78e72fd9bf5c936 SHA1 2868336a74938f20a3819b5b51e8eeb7f8a43d3d SHA256 023a1d7e57f590a684af4dd3dbee4eb0ac5a133e41f665249548ec3b89b622a8
 DIST gdb-6.8.tar.bz2 15581509 RMD160 23fc9442290b6383ce8f943ef1eb117fa06e79fb SHA1 ba1394d59dd84a1dd3a83322bd82c799596f0bcf SHA256 eedffd586bf41cf2ae2f77e6819545d6eb1e5062052320a27332fdfaaebdf818
 DIST gdb-7.0-patches-2.tar.lzma 11214 RMD160 a6ec47e6d7741dbcea88e4aca5e7e8f406f42dca SHA1 9ffad4101c5671c2f4a9afe28adaab53a2f92871 SHA256 92a42f9c0476e270d4726bcc379aa5f51659a809facbcc2fa919985b1e110470
+DIST gdb-7.0.1-patches-1.tar.lzma 11216 RMD160 0755535e1bc3c54750b077fdb9faab590caaa513 SHA1 ef711d464892a06818947dccd8f48ad037395fd8 SHA256 711d6fb705a0ede2ede6adb036def73f8c7c4fbc9b5a4f27d829800af4d84292
+DIST gdb-7.0.1.tar.bz2 17614682 RMD160 b042b7d3b3e59dda1184640c3e999f68b2114835 SHA1 a6b9693b5767dd3b1a3fa925563252afd20eea64 SHA256 560c3fd0053ade6549e71bd045f70282feb88db73b35e401bbad601a311e3c1b
 DIST gdb-7.0.tar.bz2 17604459 RMD160 a66d9c8d0aae72bbc9b6564139a95f548e3aa26d SHA1 8aed621b7ddb8c82b6ff213b56c028787db90582 SHA256 c750c695c8029da60688fc6584207fd1ea741a6b9e79e4ad03715bfbc2113ecd
 EBUILD gdb-6.6-r2.ebuild 1965 RMD160 dd9796c54dd064da5320890ae75b5daeb990966e SHA1 3fa16ab607a198a45df1c97a89ce014428e67cc0 SHA256 8616917d220910323743342822761795e29ee199e77fc7602ca9483e7e7d1e37
 EBUILD gdb-6.7.1-r3.ebuild 2057 RMD160 c0b55697d29010498fba876759fd5761ac30da33 SHA1 97aa63d6901f8ee641f0295d4e7ec3b0f718cf50 SHA256 e19744a4814fd530cde4420f1d24a81ae61c141b7f5f8866a8ae964e0a898b12
 EBUILD gdb-6.8-r1.ebuild 2217 RMD160 52a6b0aab722ab31ba81c0d69594018722e116ec SHA1 53ef7917808a0831c43b2c1227fa5738a1fa0ded SHA256 c06f279e6fb71eaba409a4a9c3d8ef559d3fc9615edc126110639c333013a3aa
 EBUILD gdb-6.8-r2.ebuild 2281 RMD160 d954946874299851eb7208dcfe46b59a6884fc90 SHA1 50b82fe8fa0898f1addbef936084da71e2de7bd3 SHA256 cecbcc830902a52f65998fdddb153a939596db5fdb5a7f4352db3384f6230878
 EBUILD gdb-6.8.50.20090811.2.12.ebuild 2827 RMD160 b51e23ec33ed66a10915575727bcebf277e8d955 SHA1 b116e312c3fadcf6d88d127da5d9a5f518334b46 SHA256 8d08edc0c431993d54bf6e9f9896cb8e07a177295f06be67ec5b6d07926cf98f
+EBUILD gdb-7.0.1.ebuild 2672 RMD160 805410b01f5b9251e73494a47c0db5f9c97b2078 SHA1 268aad559074fd69b413370c3b9c2e46d161b4c3 SHA256 7a9155713ebff1eedca5701a00d0ac235dae409016de80c6a030298cb6fa65b4
 EBUILD gdb-7.0.ebuild 2666 RMD160 10cf56319db17c88b654b7d2de92479c20467f22 SHA1 c09f6ac31cf103e3422a2602896f56289227f0bb SHA256 74b3d1240a51a2645d83dcabfb21fc59d770bbdf15e5dd55969776c730f79c4f
-MISC ChangeLog 21787 RMD160 3ac28dc06c2e9f602c6b038354a44f1923eb3b9f SHA1 d8974444ce14851010cf46f917dc36902e3c2358 SHA256 f2a8185229219226fdccec141d0181a5677f2aea4c6405739d68905a0a3e5c38
+MISC ChangeLog 21899 RMD160 72ab47d19bf0b9818f8eabf640aecf9622e65601 SHA1 04bdb70f4f9cd816749a5d5b365ec077e60b8c42 SHA256 45a35323877b9b4e209c0ce2bb6d56c92e53e5ef1e53e1d97cf61edd3e529784
 MISC metadata.xml 252 RMD160 13550896f405ea2c00c68851097c455b13211ea8 SHA1 66fb63761a7800e71fa8d88244676f588c1e3490 SHA256 2bda98dae8fab414bb0fe138ac6cc256ad1bbdc031937ab18990674fc58f1e9e
