@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.160 2010/01/05 02:38:30 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.161 2010/01/05 03:28:44 vapier Exp $
+
+*gdb-7.0.1 (05 Jan 2010)
+
+  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> +gdb-7.0.1.ebuild:
+  Version bump.
 
   05 Jan 2010; Mike Frysinger <vapier@gentoo.org> gdb-7.0.ebuild:
   Add fix by Knut St. Osmundsen for building with USE=multitarget #299600.
